[package]
name = "tripsavvy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
eframe = { version = "0.30.0", features = ["persistence"] }
egui = { version = "0.30.0", features = ["persistence"] }
env_logger = "0.11.6"
futures = "0.3.31"
image = { version = "0.25.5", features = ["webp"] }
reqwest = "0.12.12"
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
