[package]
name = "tripsavvy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
dotenv = "0.15.0"
eframe = { version = "0.30.0", features = ["persistence"] }
egui = { version = "0.30.0", features = ["callstack", "persistence"] }
env_logger = "0.11.6"
flate2 = "1.0.35"
futures = "0.3.31"
geozero = { version = "0.14.0", features = ["with-mvt"] }
image = { version = "0.25.5", features = ["webp"] }
lru = "0.13.0"
protobuf = "3.7.1"
reqwest = "0.12.12"
rstar = { version = "0.12.2", features = ["debug", "serde"] }
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread", "test-util"] }
